[gd_scene load_steps=4 format=3 uid="uid://dbavlnofy1jvh"]

[ext_resource type="Script" uid="uid://5cp42vtvlmh6" path="res://start_screen.gd" id="1_ncxyx"]
[ext_resource type="AudioStream" uid="uid://bw7ifeigbf5v1" path="res://Audio/start_screen_song.mp3" id="3_afy8x"]

[sub_resource type="QuadMesh" id="QuadMesh_pevhg"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_ncxyx")

[node name="BackGround" type="MeshInstance2D" parent="."]
self_modulate = Color(0.6784314, 0.7764706, 1, 1)
position = Vector2(576.3119, 325.20044)
scale = Vector2(1157.3762, 646.90094)
mesh = SubResource("QuadMesh_pevhg")

[node name="Title" type="Label" parent="."]
offset_left = 321.0
offset_top = 25.0
offset_right = 787.0
offset_bottom = 109.0
theme_override_font_sizes/font_size = 61
text = "Conveyer Game"

[node name="PlayButton" type="Button" parent="."]
offset_left = 512.0
offset_top = 373.0
offset_right = 592.0
offset_bottom = 431.0
theme_override_font_sizes/font_size = 36
text = "Play"

[node name="SelectDifficulty" type="Button" parent="."]
offset_left = 512.0
offset_top = 326.0
offset_right = 590.0
offset_bottom = 357.0
text = "Difficulty"

[node name="1" type="Button" parent="SelectDifficulty"]
visible = false
self_modulate = Color(0.84705883, 1, 1, 1)
layout_mode = 0
offset_left = 81.0
offset_right = 100.16
offset_bottom = 31.0
text = "1"

[node name="2" type="Button" parent="SelectDifficulty"]
visible = false
self_modulate = Color(0.84705883, 1, 1, 1)
layout_mode = 0
offset_left = 100.0
offset_right = 119.16
offset_bottom = 31.0
text = "2"

[node name="3" type="Button" parent="SelectDifficulty"]
visible = false
self_modulate = Color(0.84705883, 1, 1, 1)
layout_mode = 0
offset_left = 119.0
offset_right = 138.16
offset_bottom = 31.0
text = "3"

[node name="4" type="Button" parent="SelectDifficulty"]
visible = false
self_modulate = Color(0.84705883, 1, 1, 1)
layout_mode = 0
offset_left = 138.0
offset_right = 157.16
offset_bottom = 31.0
text = "4"

[node name="Background_Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_afy8x")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SelectDifficulty" to="." method="_on_select_difficulty_pressed"]
[connection signal="pressed" from="SelectDifficulty/1" to="." method="_on1__pressed"]
[connection signal="pressed" from="SelectDifficulty/2" to="." method="_on2__pressed"]
[connection signal="pressed" from="SelectDifficulty/3" to="." method="_on3__pressed"]
[connection signal="pressed" from="SelectDifficulty/4" to="." method="_on4__pressed"]
